fixed z-index

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -532,4 +532,5 @@ main {
     position: fixed;
     bottom: 1.5em;
     right: 1.5em;
+    z-index: 1000;
 }
